测试 mybatis-plus 枚举类和乐观锁

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+mybatis-plus:
+  typeEnumsPackage: com.mybatis.plus.entity.enums
+
 logging:
   level:
     com.mybatis.plus: debug
